Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web-server
  namespace: default
spec:
  replicas: 7
  selector:
    matchLabels:
      app: sample-web-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      namespace: default
      labels:
        app: sample-web-server
    spec:
      containers:
        - name: sample-web-server
          image: ghcr.io/hoony9x/sample-web-server-for-k8s-explanation:1.0
          livenessProbe:
            httpGet:
              path: /api/health-check
              port: 8080
          readinessProbe:
            httpGet:
              path: /api/health-check
              port: 8080
          ports:
            - containerPort: 8080
