Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-server
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: sample-web-server
  type: ClusterIP
