Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-web-server
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - sample.hoony9x.dev
      secretName: sample-tls-secret
  rules:
    - host: "sample.hoony9x.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sample-web-server
                port:
                  number: 80
